# MayaGen

./: .gitignore  config.py  docker-compose.yaml  main.py  prompts.txt  pyproject.toml  workflow_sd15.json
mayagen-be/: .env.development  .env.production  .gitignore  append_to_edit_batch.py  check_batch_2.py  check_batch_3.py  check_batch_status.py  check_batch_url.py  check_db.py  check_failed_reason.py  delete_edit_batches.py  docker-compose.yaml  fix_batch_3.py  fix_batch_counts.py  fix_batch_urls.py  main.py  mayagen.db  pyproject.toml  pytest.ini  read_edit_batch_temp.py  reset_db.py  retry_failed_jobs.py  run_migrations.py  run_server.py  test_endpoints_full_output.txt  test_endpoints_output.txt  test_output.txt
mayagen-be/app/: cli.py  database.py  models.py
mayagen-be/app/api/: admin.py  auth.py  batch.py  deps.py  edit_batch.py  images.py  jobs.py  server.py
mayagen-be/app/core/: config.py  security.py
mayagen-be/app/helpers/: api_response_helper.py
mayagen-be/changelog/: 2026-02-10-admin-rbac.md  2026-02-14-documentation-and-backend-tests.md
mayagen-be/docs/: architecture.md  frontend_backend.md  workflows.md
mayagen-be/migrations/: 06-02-2026-add_is_public-001.sql  07-02-2026-add_share_token-001.sql  09-02-2026-add_activity_logs-001.sql  10-02-2026-add_blocked_ip-001.sql  10-02-2026-add_role-001.sql  13-02-2026-add_edit_batch_job-004.sql  13-02-2026-add_google_auth-003.sql  13-02-2026-add_image_edit_fields-001.sql  13-02-2026-add_image_type-002.sql  14-02-2026-update_edit_batch_wizard_fields-001.sql
mayagen-be/tests/: conftest.py
(+52 files in other folders)
